src/scss/_layout.scss
// Layout
// ----------------------------------------------
// bootstrap: @include media-breakpoint-[down|up|only|between]([xs|sm|md|lg|xl], [xs|sm|md|lg|xl]) { ... }
html, body {height: 100%;}
body {
  background-color: $background-bg;
  display: flex;
  align-items: center;
}



.page {
  background: $page-bg;
  width: $page-width;
  display: flex;
  flex-flow: column wrap;
  margin: 0 auto;
  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.5);
  font-size: map-get($scale, small);


  main {
    flex: 1;
    display: flex;

    .sidebar {
      background-color: $sidebar-bg;
      color: $sidebar-color;
      flex: 0 0 $sidebar-width;
      width: $sidebar-width;
    }

    .content {
      flex: 1;
      background-color: $page-bg;
      color: $page-color;
    }
  }
}

.basics {
  display: flex;
  width: $page-width;
  display: flex;
  flex-flow: row wrap;
  margin: 0;

  & > header {
    background-color: darken($sidebar-bg, 5%);
    color: $sidebar-color;
    flex: 0 0 $sidebar-width;
    width: $sidebar-width;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
    text-transform:uppercase;
    text-align: center;
    //font-size: map-get($scale, small);
    padding: $spacer $spacer/2;
  }

  .summary {
    flex: 1;
    background-color: $page-bg;
    color: $page-color;
    margin-bottom: 0;
  }
}

article {
    $mv: map-get($scale, 'large');
    $mh: map-get($scale, 'large');
    margin: $mv $mh $mv * 2;

    & > header > h2 {
        $icon-bg-size: map-get($scale, 'large');

        text-transform: uppercase;
        display: flex;
        align-items: center;

        .icon {
          background-color: darken($page-bg, 4%);
          border-radius: 50%;
          width: $icon-bg-size;
          height: $icon-bg-size;
          display: flex;
          justify-content: center;
          align-items: center;
          flex-basis: $icon-bg-size;
        }
    }
}

.sidebar {
  hr {
    border-color: lighten($sidebar-bg, 10%);
    margin: 0 $spacer 0;
  }

  a { color: $sidebar-color; }

  section {
    margin-left: $spacer;
    margin-right: $spacer;
  }

  h2 {
    font-size: map-get($scale, 'large');
    line-height: map-get($scale, 'large');

    .icon {
       background-color: transparent;
    }
  }

  .contact-info {
    list-style: none;
    padding-left: map-get($scale, 'normal');
    line-height: 2;
  }

  .tags {
    padding-left: map-get($scale, 'normal');
  }
}

.detail {
  .content & {
    margin-bottom: map-get($scale, 'larger');
  }

  header {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;

    .position {
      flex: 1;
      text-transform: uppercase;
      a {
        text-transform: lowercase;
      }
    }
  }
}

